bumped jdk to 21, added runnable annotations and configs